Fix QG: Update collect method to use Stream.toList()